[gd_scene load_steps=14 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://Cursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Themes/StandardTheme.tres" type="Theme" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=4]
[ext_resource path="res://GUI.gd" type="Script" id=5]
[ext_resource path="res://lythwood_terrace_1k.hdr" type="Texture" id=7]
[ext_resource path="res://Themes/gdb-keyboard-2.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 64, 161, 48, 31 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 304, 193, 48, 31 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 100, 209, 29, 15 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 112, 161, 16, 15 )

[sub_resource type="PanoramaSky" id=8]
panorama = ExtResource( 7 )

[sub_resource type="Environment" id=9]
background_mode = 2
background_sky = SubResource( 8 )

[node name="World" type="Spatial"]

[node name="MainMenu" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.305882, 0.305882, 0.305882, 1 )
script = ExtResource( 4 )

[node name="MainMenuCenterContainer" type="CenterContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MainMenuCenterContainer"]
margin_left = 73.0
margin_top = 19.0
margin_right = 407.0
margin_bottom = 251.0
custom_constants/separation = 12

[node name="LogoLabel" type="Label" parent="MainMenu/MainMenuCenterContainer/VBoxContainer"]
margin_right = 334.0
margin_bottom = 16.0
theme = ExtResource( 3 )
text = "Cram 3D"
align = 1

[node name="WidthHBox" type="HBoxContainer" parent="MainMenu/MainMenuCenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 334.0
margin_bottom = 54.0

[node name="WidthLabel" type="Label" parent="MainMenu/MainMenuCenterContainer/VBoxContainer/WidthHBox"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Width: "

[node name="WidthBox" type="SpinBox" parent="MainMenu/MainMenuCenterContainer/VBoxContainer/WidthHBox"]
margin_left = 116.0
margin_right = 334.0
margin_bottom = 26.0
theme = ExtResource( 3 )
min_value = 1.0
value = 3.0
rounded = true

[node name="LengthHBox" type="HBoxContainer" parent="MainMenu/MainMenuCenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 334.0
margin_bottom = 92.0

[node name="LengthLabel" type="Label" parent="MainMenu/MainMenuCenterContainer/VBoxContainer/LengthHBox"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Length:"

[node name="LengthBox" type="SpinBox" parent="MainMenu/MainMenuCenterContainer/VBoxContainer/LengthHBox"]
margin_left = 116.0
margin_right = 334.0
margin_bottom = 26.0
theme = ExtResource( 3 )
min_value = 1.0
value = 3.0
rounded = true

[node name="HeightHBox" type="HBoxContainer" parent="MainMenu/MainMenuCenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 334.0
margin_bottom = 130.0

[node name="HeightLabel" type="Label" parent="MainMenu/MainMenuCenterContainer/VBoxContainer/HeightHBox"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Height:"

[node name="HeightBox" type="SpinBox" parent="MainMenu/MainMenuCenterContainer/VBoxContainer/HeightHBox"]
margin_left = 116.0
margin_right = 334.0
margin_bottom = 26.0
theme = ExtResource( 3 )
min_value = 1.0
value = 3.0
rounded = true

[node name="VersusHuman" type="Button" parent="MainMenu/MainMenuCenterContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 334.0
margin_bottom = 164.0
theme = ExtResource( 3 )
text = "Vs. Human"

[node name="AIHBox" type="HBoxContainer" parent="MainMenu/MainMenuCenterContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 334.0
margin_bottom = 198.0
custom_constants/separation = 32

[node name="VersusAI" type="Button" parent="MainMenu/MainMenuCenterContainer/VBoxContainer/AIHBox"]
margin_right = 178.0
margin_bottom = 22.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Vs. AI"

[node name="AITurn" type="Button" parent="MainMenu/MainMenuCenterContainer/VBoxContainer/AIHBox"]
margin_left = 210.0
margin_right = 334.0
margin_bottom = 22.0
theme = ExtResource( 3 )
toggle_mode = true
text = "AI: 1st"

[node name="ExitButton" type="Button" parent="MainMenu/MainMenuCenterContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 334.0
margin_bottom = 232.0
theme = ExtResource( 3 )
text = "Exit"

[node name="GUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
script = ExtResource( 5 )
turn_label = NodePath("VBoxContainer/TurnValueVBox/TurnLabel")
nimber_label = NodePath("VBoxContainer/TurnValueVBox/NimberLabel")
BLUE_COLOR = Color( 0.1274, 0.55783, 0.91, 1 )
RED_COLOR = Color( 0.8, 0.223529, 0.223529, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_left = 6.0
margin_top = 6.0
margin_right = 474.0
margin_bottom = 264.0

[node name="TurnValueVBox" type="VBoxContainer" parent="GUI/VBoxContainer"]
margin_right = 468.0
margin_bottom = 184.0
size_flags_vertical = 3

[node name="TurnLabel" type="Label" parent="GUI/VBoxContainer/TurnValueVBox"]
margin_right = 468.0
margin_bottom = 16.0
theme = ExtResource( 3 )
text = "Blue's turn"

[node name="NimberLabel" type="Label" parent="GUI/VBoxContainer/TurnValueVBox"]
margin_top = 20.0
margin_right = 468.0
margin_bottom = 36.0
theme = ExtResource( 3 )
text = "Value: [N]"

[node name="ControlsHBox" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 188.0
margin_right = 468.0
margin_bottom = 258.0

[node name="MoveStickVBox" type="VBoxContainer" parent="GUI/VBoxContainer/ControlsHBox"]
margin_right = 348.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="DPadHBox" type="HBoxContainer" parent="GUI/VBoxContainer/ControlsHBox/MoveStickVBox"]
margin_right = 348.0
margin_bottom = 31.0

[node name="DPadTexture" type="TextureRect" parent="GUI/VBoxContainer/ControlsHBox/MoveStickVBox/DPadHBox"]
margin_right = 48.0
margin_bottom = 31.0
texture = SubResource( 10 )
stretch_mode = 6

[node name="DPadLabel" type="Label" parent="GUI/VBoxContainer/ControlsHBox/MoveStickVBox/DPadHBox"]
margin_left = 52.0
margin_top = 7.0
margin_right = 116.0
margin_bottom = 23.0
theme = ExtResource( 3 )
text = "Move"

[node name="StickHBox" type="HBoxContainer" parent="GUI/VBoxContainer/ControlsHBox/MoveStickVBox"]
margin_top = 39.0
margin_right = 348.0
margin_bottom = 70.0

[node name="StickTexture" type="TextureRect" parent="GUI/VBoxContainer/ControlsHBox/MoveStickVBox/StickHBox"]
margin_right = 48.0
margin_bottom = 31.0
texture = SubResource( 11 )

[node name="StickLabel" type="Label" parent="GUI/VBoxContainer/ControlsHBox/MoveStickVBox/StickHBox"]
margin_left = 52.0
margin_top = 7.0
margin_right = 148.0
margin_bottom = 23.0
theme = ExtResource( 3 )
text = "Camera"

[node name="ButtonsVBox" type="VBoxContainer" parent="GUI/VBoxContainer/ControlsHBox"]
margin_left = 352.0
margin_right = 468.0
margin_bottom = 70.0
custom_constants/separation = 30

[node name="PlaceHBox" type="HBoxContainer" parent="GUI/VBoxContainer/ControlsHBox/ButtonsVBox"]
margin_right = 116.0
margin_bottom = 16.0

[node name="PlaceTexture" type="TextureRect" parent="GUI/VBoxContainer/ControlsHBox/ButtonsVBox/PlaceHBox"]
margin_right = 29.0
margin_bottom = 16.0
texture = SubResource( 12 )

[node name="PlaceLebel" type="Label" parent="GUI/VBoxContainer/ControlsHBox/ButtonsVBox/PlaceHBox"]
margin_left = 33.0
margin_right = 113.0
margin_bottom = 16.0
theme = ExtResource( 3 )
text = "Place"

[node name="RotateHBox" type="HBoxContainer" parent="GUI/VBoxContainer/ControlsHBox/ButtonsVBox"]
margin_top = 46.0
margin_right = 116.0
margin_bottom = 62.0

[node name="RotateTexture" type="TextureRect" parent="GUI/VBoxContainer/ControlsHBox/ButtonsVBox/RotateHBox"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 13 )

[node name="RotateLabel" type="Label" parent="GUI/VBoxContainer/ControlsHBox/ButtonsVBox/RotateHBox"]
margin_left = 20.0
margin_right = 116.0
margin_bottom = 16.0
theme = ExtResource( 3 )
text = "Rotate"

[node name="Board" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="BoardBounds" type="Spatial" parent="Board"]
__meta__ = {
"_edit_group_": true
}

[node name="Blocks" type="Spatial" parent="Board"]

[node name="Cursor" parent="Board" instance=ExtResource( 2 )]

[node name="CameraPivot" type="Spatial" parent="Board"]

[node name="Camera" type="Camera" parent="Board/CameraPivot"]
current = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.5, 0.433012, -0.75, 0, 0.866026, 0.5, 0.866025, -0.25, 0.433013, 0, 4, 0 )
light_energy = 0.413
shadow_bias = -0.14
shadow_reverse_cull_face = true
directional_shadow_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[connection signal="pressed" from="MainMenu/MainMenuCenterContainer/VBoxContainer/VersusHuman" to="MainMenu" method="_on_VersusHuman_pressed"]
[connection signal="pressed" from="MainMenu/MainMenuCenterContainer/VBoxContainer/AIHBox/VersusAI" to="MainMenu" method="_on_VersusAI_pressed"]
[connection signal="toggled" from="MainMenu/MainMenuCenterContainer/VBoxContainer/AIHBox/AITurn" to="MainMenu" method="_on_AITurn_toggled"]
[connection signal="pressed" from="MainMenu/MainMenuCenterContainer/VBoxContainer/ExitButton" to="MainMenu" method="_on_ExitButton_pressed"]
